Initial commit of a refactored German version of the Etherpad Zotero-Plugin:
- updated deprecated code, removed obsolete code
- translation of all French text to German
- enabled access to actual Zotero account though old xml API of Zotero (version 1) is being used
- provided new toolbar button icon for citation source insertion
- added new toolbar button for reference insertion
- skipped dialog for Zotoro API Keys; reading API keys from new config file "zotero_api.json"
- introduced constants for API URLs
- introduced 3 citation styles for citation source and references insertion
- replaced modal dialogs by popup dialogs
- implemented cut/copy and paste for Zotero references
- hide Zotero buttons on pad in readonly mode
- bluring Zotero citaton sources in Pad text to facilitate their identification

--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
   "name": "ep_zotero",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "description": "Enabe browsing through Zotero collections and insert citation references from there",
+  "author": { "name":  "uko" },  
   "keywords": [
+    "etherpad",
+    "plugin",
     "zotero",
-    "button",
-    "bibliography"
-  ],
-  "description": "Add a zotero button to the toolbar, to search in a zotero gallery and insert a reference.",
-  "contributors": [
-    {
-      "name": "Baptiste Bouchereau",
-      "email": "baptiste.bouchereau@idci-consulting.fr"
-    }
-  ],
-  "dependencies": {},
-  "engines": {
-    "node": "*"
-  }
+    "citation",
+    "zitieren",
+    "bibliography",
+    "reference"
+  ] 
 }
